feat: added neuralearn and revamped the code base.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </section>
     <!-- End of header -->
 
-    <!-- home section -->
+    <!-- Home section -->
     <section id="home">
       <div class="home container">
         <div>
@@ -54,9 +54,8 @@
           <a href="#projects" type="button" class="cta">Portfolio</a>
         </div>
       </div>
-      <!-- 
-      End of home section -->
     </section>
+    <!-- End of home section -->
 
     <!-- About section -->
     <section id="about">
@@ -70,11 +69,13 @@
           <h1 class="section-title">About <span>Me</span></h1>
           <h2>Software Engineer</h2>
           <p>
-            I am a creative problem-solver constantly seeking innovative
-            solutions that push the boundaries of what's possible. With a
-            collaborative mindset, I thrive in team environments utilizing
-            diverse perspectives to drive impactful outcomes. I am passionate
-            about technology and driven by a desire to make a difference.
+            Innovative Full-Stack Software Engineer with a passion for tackling
+            challenges and building impactful solutions. Recently led a
+            successful pitch that attracted investor interest; mentored by
+            billionaire Tony Elumelu. I thrive in open-minded, innovation-driven
+            teams that believe "if you can think it, you can build it." I
+            believe in ownership, continuous learning, and making things better,
+            no matter how small. Let’s build something great.
           </p>
           <a href="" class="cta" target="_blank">Download Resume</a>
         </div>
@@ -88,230 +89,8 @@
         <div class="projects-header">
           <h1 class="section-title">Recent <span>projects</span></h1>
         </div>
-        <div class="all-projects">
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Project 1</h1>
-              <h2>Rate-a-School</h2>
-              <p>
-                Developed a web application that allows users to rate schools
-                and share their experiences, utilizing AI-driven feedback to
-                help schools identify areas for improvement and enhance customer
-                satisfaction. The platform promotes transparency and enables
-                informed decision-making for parents and guardians. It was
-                designed to address issues such as bullying and poor school
-                quality by facilitating community-driven feedback. Implemented
-                secure authentication and robust data protection measures to
-                ensure user privacy. Click
-                <a
-                  href="https://github.com/semilogopaul/rateaschool"
-                  style="color: orangered"
-                  target="_blank"
-                  >here</a
-                >
-                to check it out
-              </p>
-              <p class="stack-used">
-                <em
-                  >REACT, TYPESCRIPT, TAILWIND, DJANGO, DJANGO-REST
-                  FRAMEWORK</em
-                >
-              </p>
-            </div>
-            <div class="project-img">
-              <img src="Rate-a-school.png" alt="Rate-a-School-image" />
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Project 2</h1>
-              <h2>Vendor Search App</h2>
-              <p>
-                A voluntarily built web app that extracts vendor data from excel
-                files and presents them on the front-end in a beautiful way for
-                Zeta-Web Nigeria Limited during my internship period with them
-                for easier data accessibility and efficiency. Click
-                <a
-                  href="https://vendor-search.vercel.app/"
-                  style="color: orangered"
-                  target="_blank"
-                  >here</a
-                >
-                to check it out
-              </p>
-              <p class="stack-used"><em>HTML, CSS, JAVASCRIPT</em></p>
-            </div>
-            <div class="project-img">
-              <img src="vendor-search.PNG" alt="vendor-search-app-image" />
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Project 3</h1>
-              <h2>Littlemon API</h2>
-              <p>
-                Developed an API for the LittleLemon Restaurant for reservation
-                management and other functions, implementing token-based
-                authentication, throttling, and pagination to ensure secure and
-                efficient API usage. The API supports multiple response formats,
-                including JSON and XML. Additionally, I integrated the Django
-                Debug Toolbar to facilitate easy debugging. Click
-                <a
-                  href="https://github.com/semilogopaul/littlelemon"
-                  style="color: orangered"
-                  target="_blank"
-                  >here</a
-                >
-                to check it out
-              </p>
-              <p class="stack-used">
-                <em
-                  >PYTHON, DJANGO, DJANGO-REST FRAMEWORK, SQL, HTML, CSS,
-                  JAVASCRIPT, DJOSER</em
-                >
-              </p>
-            </div>
-            <div class="project-img">
-              <img src="littlelemon.PNG" alt="littlelemon-page" />
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Project 4</h1>
-              <h2>DIY Analytics</h2>
-              <p>
-                DIY Analytics is a no-code tool for analyzing and visualizing
-                data using 'natural language' and drag-drop-click features. All
-                you have to do is upload a dataset!! How interesting is that!
-                Click
-                <a
-                  href="https://github.com/semilogopaul/ds-ml-ai-trac"
-                  style="color: orangered"
-                  target="_blank"
-                  >here</a
-                >
-                to check it out
-              </p>
-              <p class="stack-used">
-                <em>PYTHON</em>
-              </p>
-            </div>
-            <div class="project-img">
-              <img src="DIY-ANALYTICS.png" alt="DIY-ANALYTICS" />
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Project 5</h1>
-              <h2>Iphone 15</h2>
-              <p>
-                Created a luxurious, interactive iPhone 15 landing page utilizing GSAP for smooth animations and Three.js for 3D elements, providing an engaging web experience while practicing advanced web development techniques. Click
-                <a
-                  href="https://adeogun-iphone.netlify.app/"
-                  style="color: orangered"
-                  target="_blank"
-                  >here</a
-                >
-                to check it out
-              </p>
-              <p class="tech-used">
-                <em>REACT, JAVASCRIPT, THREE.JS, GSAP (Greensock), TAILWIND</em>
-              </p>
-            </div>
-            <div class="project-img">
-              <img src="iPhone.png" alt="iPhone" />
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Project 6</h1>
-              <h2>Trader Dashboard</h2>
-              <p>
-                I fixed the broken client datafeed script in the jpmc forage
-                github repository, I also fixed broken typescript files in the
-                repository to make the web application output correctly and
-                finally, I utilized JPMorgan's Perspective software to generate
-                a live graph that displays a data feed in a clear and visually
-                appealing way for traders to monitor. Click
-                <a
-                  href="https://github.com/semilogopaul/forage-jpmc-swe-task-3"
-                  style="color: orangered"
-                  target="_blank"
-                  >here</a
-                >
-                to check it out
-              </p>
-              <p class="stack-used">
-                <em>PYTHON, TYPESCRIPT, REACT, HTML, CSS, JAVASCRIPT</em>
-              </p>
-            </div>
-            <div class="project-img">
-              <img src="jpmc-graph.PNG" alt="jpmc-graph" />
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Project 7</h1>
-              <h2>Personal Finance Tracker</h2>
-              <p>
-                Personal Finance Tracker with the ability to track and log
-                different transactions, organize them (using pandas), get
-                summaries of income and expenses, and view those data in a graph
-                (using matplotlib) so you can see how much you're making month
-                over month. Click
-                <a
-                  href="https://github.com/semilogopaul/Personal-Finance-Tracker"
-                  style="color: orangered"
-                  target="_blank"
-                  >here</a
-                >
-                to check it out
-              </p>
-              <p class="stack-used"><em>PYTHON, PANDAS, MATPLOTLIB</em></p>
-            </div>
-            <div class="project-img">
-              <img src="finance-graph.PNG" alt="finance-graph" />
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Project 8</h1>
-              <h2>Nike Landing Page</h2>
-              <p>
-                A beautiful nike shoes landing page built while learning react
-                and tailwind. Click
-                <a
-                  href="https://github.com/semilogopaul/nike-landing-page"
-                  style="color: orangered"
-                  target="_blank"
-                  >here</a
-                >
-                to check it out
-              </p>
-              <p class="stack-used">
-                <em>TYPESCRIPT, TAILWIND, REACT, HTML, CSS, JAVASCRIPT</em>
-              </p>
-            </div>
-            <div class="project-img">
-              <img src="nike-page.PNG" alt="nike-page" />
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Project 9</h1>
-              <h2>Portfolio Website</h2>
-              <p>
-                Portfolio website to showcase my work in a branded, visually
-                appealing and organized manner. Click
-                <a href="" style="color: orangered" target="_blank">here</a> to
-                check it out
-              </p>
-              <p class="stack-used"><em>HTML, CSS, JAVASCRIPT</em></p>
-            </div>
-            <div class="project-img">
-              <img src="folio.JPG" alt="portfolio-hero" />
-            </div>
-          </div>
+        <div class="all-projects" id="projects-container">
+          <!-- Projects will be dynamically generated here -->
         </div>
       </div>
     </section>
@@ -323,43 +102,8 @@
         <div>
           <h1 class="section-title">Contact <span>info</span></h1>
         </div>
-        <div class="contact-items">
-          <div class="contact-item">
-            <div class="icon">
-              <img
-                src="https://img.icons8.com/bubbles/100/000000/phone.png"
-                alt="phone"
-              />
-            </div>
-            <div class="contact-info">
-              <h1>Phone</h1>
-              <h2>+234-915-762-0814</h2>
-            </div>
-          </div>
-          <div class="contact-item">
-            <div class="icon">
-              <img
-                src="https://img.icons8.com/bubbles/100/000000/new-post.png"
-                alt="email"
-              />
-            </div>
-            <div class="contact-info">
-              <h1>Email</h1>
-              <h2>oluwasemilogoadeogun@gmail.com</h2>
-            </div>
-          </div>
-          <div class="contact-item">
-            <div class="icon">
-              <img
-                src="https://img.icons8.com/bubbles/100/000000/map-marker.png"
-                alt="address"
-              />
-            </div>
-            <div class="contact-info">
-              <h1>Address</h1>
-              <h2>Lagos State, Nigeria</h2>
-            </div>
-          </div>
+        <div class="contact-items" id="contact-container">
+          <!-- Contact items will be dynamically generated here -->
         </div>
       </div>
     </section>
@@ -367,49 +111,12 @@
 
     <!-- Footer section -->
     <section id="footer">
-      <div class="footer container">
-        <div class="brand">
-          <h1><span>A</span>deogun <span>S</span>emilogo</h1>
-        </div>
-        <h2>Software Engineer</h2>
-        <div class="social-icon">
-          <div class="social-item">
-            <a
-              href="https://instagram.com/the_oluwasemilogo?igshid=ZDc4ODBmNjlmNQ=="
-              target="_blank"
-              ><img
-                src="https://img.icons8.com/bubbles/100/000000/instagram-new.png"
-                alt="instagram"
-            /></a>
-          </div>
-          <div class="social-item">
-            <a
-              href="https://www.linkedin.com/in/oluwasemilogo-adeogun-5a0b10242/"
-              target="_blank"
-              ><img
-                src="https://img.icons8.com/bubbles/100/000000/linkedin.png"
-                alt="linkedin"
-            /></a>
-          </div>
-          <div class="social-item">
-            <a href="https://github.com/semilogopaul" target="_blank"
-              ><img
-                src="https://img.icons8.com/bubbles/100/000000/github.png"
-                alt="github"
-            /></a>
-          </div>
-          <div class="social-item">
-            <a href="https://tiktok.com/@the_oluwasemilogo" target="_blank"
-              ><img
-                src="https://img.icons8.com/bubbles/100/000000/tiktok.png"
-                alt="tiktok"
-            /></a>
-          </div>
-        </div>
-        <p>Copyright &copy 2025 Adeogun. All rights reserved</p>
+      <div class="footer container" id="footer-container">
+        <!-- Footer content will be dynamically generated here -->
       </div>
     </section>
     <!-- End of footer section -->
+
     <script src="./app.js"></script>
   </body>
 </html>
